# ipfs-proof-buddy

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  codecov.yml  rust_linters_formatters.yml  rust_test.yml  setup.yml
src/: database_types.rs  deal_tasks.rs  deal_tracker.rs  deal_tracker_db.rs  estuary_talker.rs  main.rs  proof_gen.rs  proof_utils.rs  talk_to_ipfs.rs  talk_to_vitalik.rs  types.rs  webserver.rs  window_utils.rs
