[package]
name = "ipfs-proof-buddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bao = "0.12"
tokio = { version = "1", features = ["full"] }
ethers = { git = "https://github.com/gakonst/ethers-rs" }
anyhow = "1.0"
cid = "0.8"
sled = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
typed-sled = "0.2"
rocket = "0.5.0-rc.2"
config = "0.13"
log = "0.4"
