[package]
name = "ipfs_proof_buddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO clean up deps
bao = "0.12"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
cid = "0.8"
sled = "0.34"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4"
typed-sled = "0.2"
rocket = {version = "0.5.0-rc.2", features = ["json"]}
config = "0.13"
log = "0.4"
tokio-stream = "0.1"
banyan-shared = { git = "https://github.com/banyancomputer/banyan-shared-rs" }

#[dependencies.banyan-shared]
#path = "../banyan-shared"
